comment and deleted

--- a/websiteProject/03-cv-business.html
+++ b/websiteProject/03-cv-business.html
@@ -86,10 +86,6 @@
 
 					</div><!-- col-sm-8 -->
 
-					<!-- POSSIBLY DELETE -->
-					<!--  <div class="col-sm-10 col-md-3 col-lg-3">
-						<a class="downlad-btn" href="#">Download CV</a>
-					</div>col-lg-2 -->
 
 				</div>
 
@@ -125,9 +121,10 @@
 							</div>
 						</div>
 
+						<!--# CREATE THE SAME COUNTER FUNCTION HERE WITH THE NUMBER OF HOURS YOU SPEND ON YOUR PHONE OR COMPUTER. #-->
 						<div class="col-sm-6 col-md-6 col-lg-3">
 							<div class="counter margin-b-50">
-								<!--# CREATE THE SAME COUNTER FUNCTION HERE WITH THE NUMBER OF DOGS OR CATS YOU WISHED YOU HAD. #-->
+								<!--#INSERT FUNCTION HERE-->
 							</div>
 						</div>
 					</div>
