--- a/websiteProject/myWebsite.html
+++ b/websiteProject/myWebsite.html
@@ -1,7 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>CV - Portfolio</title>
+	<!--# CHANGE THE TITLE BELOW AND SEE WHAT HAPPENS ON THE WEBSITE.#-->
+	<title>My Career</title>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8">
@@ -11,7 +12,9 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700%7CAllura" rel="stylesheet">
 
-	<!-- Stylesheets -->
+	<!-- Stylesheets help make the website look nice. Without them, the website would look bland.  -->
+	<!--# Try commenting out these 5 style sheets below. To do so have the two arrows you see at the beginning and end of this statement put in the links below. #-->
+	<!--# Delete the arrows to uncomment your code and make the website look nice again! -->
 
 	<link href="common-css/bootstrap.css" rel="stylesheet">
 
@@ -19,13 +22,16 @@
 
 	<link href="common-css/fluidbox.min.css" rel="stylesheet">
 
-	<link href="03-cv-business/css/styles.css" rel="stylesheet">
+	<link href="myWebsiteStyle/css/styles.css" rel="stylesheet">
 
-	<link href="03-cv-business/css/responsive.css" rel="stylesheet">
+	<link href="myWebsiteStyle/css/responsive.css" rel="stylesheet">
+
+	<!--#LOOK BACK AT YOUR HANDOUT UNDER 'TASK 2' TO CHANGE THE STYLE OF THE WEBSITE.#-->
 
 </head>
+
 <body>
-	<!--TODO: FIGURE OUT HOW TO INCLUDE CSS AS A TASK FOR KIDS TO SEE THE CSS. -->
+	<!--# THIS IS YOUR INTRODUCTION SECTION WHERE YOU WILL PUT YOUR BASIC CONTACT INFORMATION. YOU DON'T HAVE TO USE YOUR REAL INFO. #-->
 	<section class="intro-section">
 		<div class="container">
 			<div class="heading-wrapper">
@@ -34,34 +40,40 @@
 						<div class="info">
 							<i class="icon ion-ios-location-outline"></i>
 							<div class="right-area">
+
+								<!--#FILL OUT AN ADDRESS HERE.#-->
 								<h5>1234 Street Name Here</h5>
 								<h5> City, State Zip Code here</h5>
-							</div><!-- right-area -->
-						</div><!-- info -->
-					</div><!-- col-sm-4 -->
+							</div>
+						</div>
+					</div>
 
 					<div class="col-sm-6 col-md-6 col-lg-4">
 						<div class="info">
 							<i class="icon ion-ios-telephone-outline"></i>
 							<div class="right-area">
+
+								<!--#FILL OUT A PHONE NUMBER HERE.#-->
 								<h5>PHONE-NUMBER-HERE</h5>
-							</div><!-- right-area -->
-						</div><!-- info -->
-					</div><!-- col-sm-4 -->
+							</div>
+						</div>
+					</div>
 
 					<div class="col-sm-6 col-md-6 col-lg-4">
 						<div class="info">
 							<i class="icon ion-ios-chatboxes-outline"></i>
 							<div class="right-area">
+
+								<!--#FILL OUT AN EMAIL HERE.#-->
 								<h5>email-name@here.com</h5>
 
 								<!--#HOW LONG WILL IT TAKE YOU TO REPLY?#-->
 								<h6>REPLY IN 24 HOURS</h6>
-							</div><!-- right-area -->
-						</div><!-- info -->
-					</div><!-- col-sm-4 -->
-				</div><!-- row -->
-			</div><!-- heading-wrapper -->
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 
 		<!--# THIS IS WHERE YOU WILL INTRODUCE YOURSELF IN YOUR WEBSITE. FILL OUT THE INFO BASED ON WHAT YOU WANT PEOPLE TO KNOW ABOUT YOU. #-->
 			<div class="intro">
@@ -71,7 +83,7 @@
 
 						<!--# ASK THE MENTOR TO TAKE YOUR PHOTO. CHANGE YOUR PROFILE PICTURE HERE #-->
 						<div class="profile-img margin-b-30"><img src="images/profile-1-250x250.jpg" alt=""></div>
-					</div><!-- col-sm-8 -->
+					</div>
 
 					<div class="col-sm-10 col-md-5 col-lg-6">
 							<h2><b>Your Name </b></h2>
@@ -84,7 +96,7 @@
 								<li><b class="font-yellow">FAVORITE FOOD</b> : Hot dogs!</li>
 							</ul>
 
-					</div><!-- col-sm-8 -->
+					</div>
 
 
 				</div>
@@ -129,7 +141,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 		</div>
 	</section>
@@ -144,7 +155,6 @@
 						<h6 class="font-lite-black"><b>PREVIOUS JOBS</b></h6>
 					</div>
 				</div>
-
 				<div class="col-sm-12">
 					<div class="experience margin-b-50">
 						<!--# ADD YOUR FIRST EXPERIENCE HERE. -->
@@ -153,12 +163,7 @@
 						<h6 class="font-lite-black margin-t-10">MONTH DATE </h6>
 						<p class="margin-tb-30">I programmed in (INSERT LANGUAGE HERE). My favorite project was __. </p>
 
-						<!--ignore this for now-->
-						<!-- <ul class="list margin-b-30">
-							<li><span>Duis non volutpat arcu, eu mollis tellus.</span></li>
-							<li><span>Quis consequat nulla effi citur at.</span></li>
-							<li><span>Sed finibus aliquam neque sit.</span></li>
-						</ul> -->
+
 
 					</div>
 
@@ -251,7 +256,7 @@
 						<h3><b>Education Training</b></h3>
 						<h6 class="font-lite-black"><b>How I learned.</b></h6>
 					</div>
-				</div><!-- col-sm-3 -->
+				</div>
 				<div class="col-sm-12">
 					<div class="education-wrapper margin-b-50">
 						<!--# WHAT DO THE 'RIGHT' AND 'LEFT' DO AFTER 'EDUCATION'-->
@@ -259,14 +264,15 @@
 							<h4><b>TITLE OF DEGREE OR CERTIFICATE</b></h4>
 							<h5 class="font-yellow"><b>LOCATION OF TRAINING</b></h5>
 							<h6 class="font-lite-black margin-t-10">MONTH AND YEARS OF TRAINING </h6> <!--ex: MARCH 2019 - MAY 2025 -->
+
 							<!--WHAT DID YOU LEARN HERE?-->
 							<p class="margin-t-30">I learned how to _. </p>
 						</div>
-
 					<div class="education left">
 							<h4><b>TITLE OF DEGREE OR CERTIFICATE</b></h4>
 							<h5 class="font-yellow"><b>LOCATION OF TRAINING</b></h5>
 							<h6 class="font-lite-black margin-t-10">MONTH AND YEARS OF TRAINING </h6> <!--ex: MARCH 2019 - MAY 2025 -->
+
 							<!--WHAT DID YOU LEARN HERE?-->
 							<p class="margin-t-30">I learned how to _. </p>
 						</div>
@@ -275,6 +281,7 @@
 							<h4><b>TITLE OF DEGREE OR CERTIFICATE</b></h4>
 							<h5 class="font-yellow"><b>LOCATION OF TRAINING</b></h5>
 							<h6 class="font-lite-black margin-t-10">MONTH AND YEARS OF TRAINING </h6> <!--ex: MARCH 2019 - MAY 2025 -->
+
 							<!--WHAT DID YOU LEARN HERE?-->
 							<p class="margin-t-30">I learned how to _. </p>
 						</div>
@@ -285,7 +292,8 @@
 
 	</section>
 
-	<!--# IF YOU HAVE TIME DO THIS PART. ADD YOUR FAVORITE QUOTE HERE #-->
+	<!--# IF YOU HAVE TIME DO THIS PART. -->
+	<!--# ADD YOUR FAVORITE QUOTE HERE #-->
 	<!-- <section class="quoto-section center-text">
 		<div class="container">
 			<div class="row">
@@ -355,7 +363,7 @@
 					</div>
 				</div>
 			<!--# LET'S CHANGE THE COLOR OF THE RING. #-->
-			<!--# FIND THE 'SCRIPT.JS' AND FIND THE 'enableRadialProgress' FUNCTION #-->
+			<!--# FIND THE 'scripts.js'  under the 'common-js' FOLDER AND FIND THE 'enableRadialProgress' FUNCTION #-->
 			</div>
 		</div>
 	</section>
